--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,3 +10,27 @@
 .form_group{
     @apply flex flex-col lg:flex-row gap-x-2 w-full justify-between
 }
+
+
+.input-label{
+    @apply after:content-['*'] after:ml-0.5 after:text-red-500 block text-sm font-medium 
+}
+
+.input{
+    @apply mb-6 w-full placeholder-shown:border-gray-500 rounded-md focus:border-0 border-none focus:ring-0
+}
+
+
+.button{
+    @apply w-full p-2 text-white rounded-xl hover:drop-shadow-lg transition-all
+}
+
+
+
+.link{
+    @apply text-orange-500 hover:text-orange-600 transition-colors
+}
+
+.contain{
+    @apply max-w-4xl bg-white shadow-xl rounded-md mx-auto p-3
+}
